added titles to <a> tags

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         </figure>
         <div class="featured-in">
           <span class="featured-in-allcaps">featured in:</span><br />
-          <span class="featured-in-cap"
-            ><a href="#" class="link-style">fresh cranberry recipes that go beyond sauce</a>
+          <span class="featured-in-cap">
+            <a href="#" title="Fresh cranberry recipes" class="link-style">
+              fresh cranberry recipes that go beyond sauce
+            </a>
           </span>
         </div>
       </div>
@@ -67,7 +69,7 @@
             </p>
           </li>
         </ol>
-        <p>Read more on <a href="#" class="link-style">Simply recipes</a></p>
+        <p>Read more on <a href="#" title="Simply recipes" class="link-style">Simply recipes</a></p>
       </div>
     </main>
   </body>
